--- a/examples/python-web-app/devops/demo/templates/demo_site.html
+++ b/examples/python-web-app/devops/demo/templates/demo_site.html
@@ -87,8 +87,8 @@ footer {
   
   <article>
     <h1>Agenda</h1>
-    <p>Learn DevOps with strong foundational knowledge and practical understanding</p>
-    <p>Please Share the Channel with your friends and colleagues</p>
+    <p>Hi Karthik Reddy</p>
+    <p>Welcome to Devops Practice Page</p>
   </article>
 </section>
 
